--- a/src/scss/components/_primary-footer.scss
+++ b/src/scss/components/_primary-footer.scss
@@ -8,7 +8,7 @@
     padding-inline: map-get($sizes, 500);
     padding-block: map-get($sizes, 400);
 
-    margin-top: map-get($sizes, 800);
+    margin-top: map-get($sizes, 600);
     
     display: flex;
     flex-direction: row;
