--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -30,6 +30,7 @@ $gradient-accent: linear-gradient(108deg,#B16CEA 8%,#FF5E69 40%,#FF8A56 77%,#FFA
 $vignette: radial-gradient(transparent 45%, rgba(0, 0, 0, 0.3));
 
 $mobile-breakpoint: 700px;
+$xs-breakpoint: 400px;
 
 $sizes: (
     100: 0.25rem,
